<resources>
    <string name="app_name">Spades</string>
    <string name="three">3 Players</string>
    <string name="four">4 Players</string>
    <string name="player1_name">Name Player 1</string>
    <string name="player2_name">Name Player 2</string>
    <string name="player3_name">Name Player 3</string>
    <string name="player4_name">Name Player 4</string>
    <string name="next">Start Game</string>
    <string name="x0">0</string>
    <string name="x1">1</string>
    <string name="x2">2</string>
    <string name="x3">3</string>
    <string name="x4">4</string>
    <string name="x5">5</string>
    <string name="x6">6</string>
    <string name="x7">7</string>
    <string name="x8">8</string>
    <string name="x9">9</string>
    <string name="x10">10</string>
    <string name="contentDescription">Logo</string>
    <string name="continue_game">Continue</string>
    <string name="start">Start Next Round</string>
    <string name="declare_how_many_tricks_they_expect_to_win">Declare how many tricks\nthey expect to win</string>
    <string name="confirm_ticks">Confirm ticks</string>
    <string name="done">Done</string>
    <string name="minus">-</string>
    <string name="number_of_players">Number of Players</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="deutsch">German</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="player_must_deal_cards">%s must deal cards</string>
    <string name="round">Round %d</string>
    <string name="trick">Trick</string>
    <string name="tricks">Tricks</string>
    <string name="combined_trick_prediction">%d/%d %s</string>
    <string name="points_added">+%d Points</string>
    <string name="set_player_names">Set player names</string>
    <string name="random_first_dealer">Random first Dealer</string>
    <string name="image_of_playing_cards">Image of playing cards</string>
    <string-array name="spinner_entries_1_10">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="dialog_empty_name_title">Empty Name</string>
    <string name="dialog_empty_name_message">Please give each player a name</string>
    <string name="dialog_name_too_long_title">Name too long</string>
    <string name="dialog_name_too_long_message">Names can only be a maximum of 10 characters long</string>
    <string name="tagline">Call your tricks. Keep the score.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <plurals name="cards_per_player">
        <item quantity="one">card per player</item>
        <item quantity="other">cards per player</item>
    </plurals>
    <string name="declare_tricks_subtitle">Call tricks</string>
    <string name="deal_subtitle">%s deals</string>
    <string name="tricks_sum_warning">Sum must differ from %d</string>
    <string name="confirm_all_hit_warning">At least one player must miss</string>
    <string name="round_progress">Round %1$d / %2$d</string>
    <string name="final_score">Final score</string>
    <string name="rounds_played">%d rounds played</string>
    <string name="source_on_github">Source on GitHub</string>
    <string name="open_source_built_with_love">Open source · built with ❤️</string>
    <string name="next_round">Next round</string>
    <string name="continue_label">Continue</string>
    <string name="wordmark">SPADES</string>
    <string name="github_url" translatable="false">https://github.com/Blanco27/SpadesScore</string>
</resources>