<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    tools:context=".GameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <LinearLayout
            android:id="@+id/current_score_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_score_player1_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:textSize="14sp"
                app:autoSizeTextType="none"
                tools:text="player 1: 25" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/current_score_player2_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:textSize="14sp"
                app:autoSizeTextType="none"
                tools:text="player 2: 65" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/current_score_player3_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:textSize="14sp"
                app:autoSizeTextType="none"
                tools:text="player 3: 44" />

            <Space
                android:id="@+id/player4_space"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/current_score_player4_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:textSize="14sp"
                app:autoSizeTextType="none"
                tools:text="Player 4: 33" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/round_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="40sp"
            tools:text="Round X" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/player_name_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="36sp"
            tools:text="Player name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_wrong_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wrong_Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/wrong"
                    android:textSize="20sp"
                    app:backgroundTint="#da2f3a" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_0_3_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scored0_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x0"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored1_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x1"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored2_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x2"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored3_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x3"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_4_7_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scored4_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x4"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored5_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x5"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored6_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x6"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored7_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x7"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_8_10_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored8_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x8"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored9_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x9"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scored10_Button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/x10"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>